Fix dark mode

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/_frame_layout.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/_frame_layout.scss
@@ -40,7 +40,7 @@
 
 .lnsFrameLayout__sidebar--right {
   @include euiScrollBar;
-  background-color: $euiColorLightestShade;
+  background-color: lightOrDarkTheme($euiColorLightestShade, $euiColorInk);
   min-width: $lnsPanelMinWidth + $euiSizeXL;
   overflow-x: hidden;
   overflow-y: scroll;
